fixed feature-items spacing

--- a/css/main.css
+++ b/css/main.css
@@ -285,16 +285,15 @@ body .custom-navlink:hover {
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
   width: 250px;
-  -webkit-box-align: space-between;
-      -ms-flex-align: space-between;
-          align-items: space-between;
   -webkit-transform: translate(0, 200px);
           transform: translate(0, 200px);
-  opacity: 0;
+	opacity: 0;
+	margin: auto 20px 20px;
 }
 
 #features-section .features-container .feature-item img {
-  width: 86px;
+	width: 86px;
+	margin-bottom: 20px;
 }
 
 #features-section .features-container .feature-item p {
